--- a/index.ipynb
+++ b/index.ipynb
@@ -180,14 +180,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.distance_all(selected_individual, neighbors)>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    remaining_neighbors = filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
     "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), remaining_neighbors))\n",
-    "distance"
+    "distance_all"
    ]
   },
   {
