--- a/index.ipynb
+++ b/index.ipynb
@@ -258,23 +258,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'name': 'Fred', 'x': 5, 'y': 8, 'distance': 1.0},\n",
-       " {'name': 'Steven', 'x': 3, 'y': 6, 'distance': 2.23606797749979}]"
+       " {'name': 'Steven', 'x': 3, 'y': 6, 'distance': 2.23606797749979},\n",
+       " {'name': 'Natalie', 'x': 5, 'y': 4, 'distance': 4.123105625617661}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nearest_neighbors(bob, neighbors, 2)"
+    "nearest_neighbors(bob, neighbors, 3)"
    ]
   },
   {
